--- a/PaymentInterfaceProject/src/main/java/userinterface/BookBusTickets.form
+++ b/PaymentInterfaceProject/src/main/java/userinterface/BookBusTickets.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -920,61 +920,15 @@
             <Component class="javax.swing.JComboBox" name="jComboBox2">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="50">
-                    <StringItem index="0" value="New York City"/>
-                    <StringItem index="1" value="Los Angeles"/>
-                    <StringItem index="2" value="Chicago"/>
-                    <StringItem index="3" value="Houston"/>
-                    <StringItem index="4" value="Phoenix"/>
-                    <StringItem index="5" value="Philadelphia"/>
-                    <StringItem index="6" value="San Antonio"/>
-                    <StringItem index="7" value="San Diego"/>
-                    <StringItem index="8" value="Dallas"/>
-                    <StringItem index="9" value="San Jose"/>
-                    <StringItem index="10" value="Austin"/>
-                    <StringItem index="11" value="Jacksonville"/>
-                    <StringItem index="12" value="Fort Worth"/>
-                    <StringItem index="13" value="Columbus"/>
-                    <StringItem index="14" value="Indianapolis"/>
-                    <StringItem index="15" value="Charlotte"/>
-                    <StringItem index="16" value="San Francisco"/>
-                    <StringItem index="17" value="Louisville"/>
-                    <StringItem index="18" value="Seattle"/>
-                    <StringItem index="19" value="Nashville"/>
-                    <StringItem index="20" value="Denver"/>
-                    <StringItem index="21" value="Washington"/>
-                    <StringItem index="22" value="Oklahoma City"/>
-                    <StringItem index="23" value="El Paso"/>
-                    <StringItem index="24" value="Boston"/>
-                    <StringItem index="25" value="Portland"/>
-                    <StringItem index="26" value="Las Vegas"/>
-                    <StringItem index="27" value="Detroit"/>
-                    <StringItem index="28" value="Memphis"/>
-                    <StringItem index="29" value="Baltimore"/>
-                    <StringItem index="30" value="Milwaukee"/>
-                    <StringItem index="31" value="Albuquerque"/>
-                    <StringItem index="32" value="Tucson"/>
-                    <StringItem index="33" value="Fresno"/>
-                    <StringItem index="34" value="Sacramento"/>
-                    <StringItem index="35" value="Kansas City"/>
-                    <StringItem index="36" value="Mesa"/>
-                    <StringItem index="37" value="Atlanta"/>
-                    <StringItem index="38" value="Omaha"/>
-                    <StringItem index="39" value="Colorado Springs"/>
-                    <StringItem index="40" value="Raleigh"/>
-                    <StringItem index="41" value="Long Beach"/>
-                    <StringItem index="42" value="Virginia Beach"/>
-                    <StringItem index="43" value="Miami"/>
-                    <StringItem index="44" value="Oakland"/>
-                    <StringItem index="45" value="Minneapolis"/>
-                    <StringItem index="46" value="Tulsa"/>
-                    <StringItem index="47" value="Bakersfield"/>
-                    <StringItem index="48" value="Wichita"/>
-                    <StringItem index="49" value="Arlington"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jComboBox2ItemStateChanged"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox2ActionPerformed"/>
+              </Events>
               <AuxValues>
+                <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="try{&#xa;    MySql.createConn();&#xa;    ResultSet rs = MySql.selectQuery(&quot;select * from cities;&quot;);&#xa;    while(rs.next()){&#xa;        jComboBox2.addItem(rs.getString(2));&#xa;    }&#xa;    &#xa;}&#xa; catch(SQLException ex)&#xa;          {&#xa;            System.out.println(ex);&#xa;          }&#xa; finally&#xa;          {&#xa;            MySql.shutDownConn();&#xa;          }"/>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
               <Constraints>
@@ -999,58 +953,7 @@
             <Component class="javax.swing.JComboBox" name="jComboBox3">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="50">
-                    <StringItem index="0" value="New York City"/>
-                    <StringItem index="1" value="Los Angeles"/>
-                    <StringItem index="2" value="Chicago"/>
-                    <StringItem index="3" value="Houston"/>
-                    <StringItem index="4" value="Phoenix"/>
-                    <StringItem index="5" value="Philadelphia"/>
-                    <StringItem index="6" value="San Antonio"/>
-                    <StringItem index="7" value="San Diego"/>
-                    <StringItem index="8" value="Dallas"/>
-                    <StringItem index="9" value="San Jose"/>
-                    <StringItem index="10" value="Austin"/>
-                    <StringItem index="11" value="Jacksonville"/>
-                    <StringItem index="12" value="Fort Worth"/>
-                    <StringItem index="13" value="Columbus"/>
-                    <StringItem index="14" value="Indianapolis"/>
-                    <StringItem index="15" value="Charlotte"/>
-                    <StringItem index="16" value="San Francisco"/>
-                    <StringItem index="17" value="Louisville"/>
-                    <StringItem index="18" value="Seattle"/>
-                    <StringItem index="19" value="Nashville"/>
-                    <StringItem index="20" value="Denver"/>
-                    <StringItem index="21" value="Washington"/>
-                    <StringItem index="22" value="Oklahoma City"/>
-                    <StringItem index="23" value="El Paso"/>
-                    <StringItem index="24" value="Boston"/>
-                    <StringItem index="25" value="Portland"/>
-                    <StringItem index="26" value="Las Vegas"/>
-                    <StringItem index="27" value="Detroit"/>
-                    <StringItem index="28" value="Memphis"/>
-                    <StringItem index="29" value="Baltimore"/>
-                    <StringItem index="30" value="Milwaukee"/>
-                    <StringItem index="31" value="Albuquerque"/>
-                    <StringItem index="32" value="Tucson"/>
-                    <StringItem index="33" value="Fresno"/>
-                    <StringItem index="34" value="Sacramento"/>
-                    <StringItem index="35" value="Kansas City"/>
-                    <StringItem index="36" value="Mesa"/>
-                    <StringItem index="37" value="Atlanta"/>
-                    <StringItem index="38" value="Omaha"/>
-                    <StringItem index="39" value="Colorado Springs"/>
-                    <StringItem index="40" value="Raleigh"/>
-                    <StringItem index="41" value="Long Beach"/>
-                    <StringItem index="42" value="Virginia Beach"/>
-                    <StringItem index="43" value="Miami"/>
-                    <StringItem index="44" value="Oakland"/>
-                    <StringItem index="45" value="Minneapolis"/>
-                    <StringItem index="46" value="Tulsa"/>
-                    <StringItem index="47" value="Bakersfield"/>
-                    <StringItem index="48" value="Wichita"/>
-                    <StringItem index="49" value="Arlington"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
               <AuxValues>
@@ -1100,7 +1003,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="650" y="220" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="650" y="230" width="-1" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -1148,7 +1051,7 @@
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="600" y="260" width="260" height="200"/>
+                  <AbsoluteConstraints x="600" y="270" width="250" height="190"/>
                 </Constraint>
               </Constraints>
 
@@ -1192,8 +1095,8 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Show Previous Bookings">
-                <Property name="tabTitle" type="java.lang.String" value="Show Previous Bookings"/>
+              <JTabbedPaneConstraints tabName="Show Bookings">
+                <Property name="tabTitle" type="java.lang.String" value="Show Bookings"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -1210,7 +1113,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="cc" green="66" red="0" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Previous Bookings"/>
+                <Property name="text" type="java.lang.String" value=" Booking History"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
